connected sign up/additional info pages to backend and api. fully functional

--- a/public/assets/Styles/02.Signup/Signup.scss
+++ b/public/assets/Styles/02.Signup/Signup.scss
@@ -146,7 +146,6 @@ $phone: 450px;
       color: rgb(156, 156, 156);
       font-weight: lighter;
     }
-
   }
 
   .input-container {
@@ -201,6 +200,70 @@ $phone: 450px;
     width: 22px;
     height: 22px;
   }
+
+  .loader {
+    color: #ffffff;
+    font-size: 11px;
+    text-indent: -99999em;
+    margin: 55px auto;
+    position: relative;
+    width: 10em;
+    height: 10em;
+    box-shadow: inset 0 0 0 1em;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+  .loader:before,
+  .loader:after {
+    position: absolute;
+    content: "";
+  }
+  .loader:before {
+    width: 5.2em;
+    height: 10.2em;
+    background: #0dc5c1;
+    border-radius: 10.2em 0 0 10.2em;
+    top: -0.1em;
+    left: -0.1em;
+    -webkit-transform-origin: 5.1em 5.1em;
+    transform-origin: 5.1em 5.1em;
+    -webkit-animation: load2 2s infinite ease 1.5s;
+    animation: load2 2s infinite ease 1.5s;
+  }
+  .loader:after {
+    width: 5.2em;
+    height: 10.2em;
+    background: #0dc5c1;
+    border-radius: 0 10.2em 10.2em 0;
+    top: -0.1em;
+    left: 4.9em;
+    -webkit-transform-origin: 0.1em 5.1em;
+    transform-origin: 0.1em 5.1em;
+    -webkit-animation: load2 2s infinite ease;
+    animation: load2 2s infinite ease;
+  }
+  @-webkit-keyframes load2 {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes load2 {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+
   .signin-signup-btn {
     width: 75%;
     padding: 12px;
@@ -247,7 +310,6 @@ $phone: 450px;
     margin-left: 7px;
     cursor: pointer;
   }
-
 }
 
 .rights-text-div {
@@ -271,7 +333,6 @@ $phone: 450px;
   color: #5d5d5d;
 }
 
-
 //Phone Input Specific Styling ----------------------------------------//
 .react-tel-input {
   width: 100%;
@@ -288,14 +349,14 @@ $phone: 450px;
     outline: none;
     color: #5d5d5d;
     // padding: 18.5px 14px 18.5px 58px;
-    transition: box-shadow ease .25s, border-color ease .25s;
+    transition: box-shadow ease 0.25s, border-color ease 0.25s;
     &:hover {
       border-color: #000;
     }
     &:focus {
       border-color: #1976d2;
       box-shadow: 0 0 0 1px #1976d2;
-      &+div:before {
+      & + div:before {
         color: #1976d2;
       }
     }
@@ -304,8 +365,8 @@ $phone: 450px;
       &:focus {
         box-shadow: 0 0 0 1px #f44336;
       }
-      &+div:before {
-        content: 'Error';
+      & + div:before {
+        content: "Error";
         display: none;
         color: #f44336;
         width: 27px;
@@ -318,7 +379,8 @@ $phone: 450px;
     bottom: 0;
     padding: 0;
     border-radius: 3px 0 0 3px;
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       cursor: pointer;
     }
     &.open {
@@ -326,10 +388,10 @@ $phone: 450px;
     }
   }
   input[disabled] {
-    &+.flag-dropdown {
+    & + .flag-dropdown {
       &:hover {
         cursor: default;
-        border-color: #CACACA;
+        border-color: #cacaca;
         .selected-flag {
           background-color: transparent;
         }
@@ -439,7 +501,7 @@ $phone: 450px;
     }
     .no-entries-message {
       padding: 7px 10px 11px;
-      opacity: .7;
+      opacity: 0.7;
     }
   }
   .invalid-number-message {
