Budget breakdown modified to show only one budget with new graphql query

--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -1018,6 +1018,15 @@
   background-color: white;
 }
 
+@media screen and (max-width: 3800px) {
+  .additional-info-container {
+    padding-top: 5em;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .additional-info-container {
     -webkit-box-pack: start;
@@ -1484,6 +1493,7 @@
   font-weight: lighter;
   background-color: #20b2aa;
   color: white;
+  letter-spacing: 1px;
   border: none;
   margin-top: 20px;
   margin-bottom: 5px;
@@ -1502,6 +1512,73 @@
 
 .additional-info-credentials-div .signin-additional-info-btn:hover {
   background-color: #1c9993;
+}
+
+.connect-plaid-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  justify-content: center;
+  width: 100%;
+}
+
+.connect-plaid-div .connect-bank-btn {
+  width: 60%;
+  height: 45px;
+  color: white;
+  background-color: #37686e;
+  border: none;
+  font-size: 1.1em;
+  -webkit-transition: 0.1s ease-in;
+  transition: 0.1s ease-in;
+  letter-spacing: 1px;
+}
+
+.connect-plaid-div .connect-bank-btn:hover {
+  background-color: #1c9993;
+}
+
+.connect-plaid-div .connect-bank-success {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  justify-content: center;
+  width: 60%;
+  height: 45px;
+  color: white;
+  text-align: center;
+  background-color: #2aa38f;
+  border: none;
+  border-radius: 15px;
+  font-size: 1.1em;
+  letter-spacing: 1px;
+}
+
+.connect-plaid-div .connect-bank-success .success-message {
+  font-size: 1.1em;
+  font-weight: bold;
 }
 
 .login-container {
@@ -2380,6 +2457,51 @@
       justify-content: space-around;
   width: 65%;
   height: 100%;
+}
+
+@media screen and (max-width: 3300px) {
+  .settings-outer-container .settings-main-container {
+    width: 32%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 3200px) {
+  .settings-outer-container .settings-main-container {
+    width: 33%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 3000px) {
+  .settings-outer-container .settings-main-container {
+    width: 35%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 2800px) {
+  .settings-outer-container .settings-main-container {
+    width: 40%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 2500px) {
+  .settings-outer-container .settings-main-container {
+    width: 45%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
 }
 
 @media screen and (max-width: 2030px) {
@@ -3481,11 +3603,13 @@
   width: 100%;
   height: 30px;
   margin-bottom: 20px;
+  font-size: 18px;
 }
 
 .bb-left .bb-budget-box .bb-budget-top .bb-budget-top-right {
   padding: 10px;
   cursor: pointer;
+  margin: 20px;
 }
 
 .bb-left .bb-budget-box .bb-budget-middle {
@@ -3566,17 +3690,6 @@
           flex-direction: row;
 }
 
-.bb-left .bb-budget-box .bb-budget-middle .bb-add-body .bb-buttons-div .bb-add-custom-btn {
-  cursor: pointer;
-  margin-right: 20px;
-  font-size: 18px;
-  padding: 5px;
-  border-radius: 5px;
-  border: none;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
-          box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
-}
-
 .bb-left .bb-budget-box .bb-budget-bottom {
   width: 95%;
   display: -webkit-box;
@@ -3621,6 +3734,71 @@
   font-weight: bold;
 }
 
+.bb-edit-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.bb-edit-form .bb-add-custom-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.bb-edit-form .bb-delete-custom-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+  top: 3px;
+  padding: 11px;
+}
+
+.bb-add-custom-btn {
+  cursor: pointer;
+  font-size: 18px;
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+          box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+  border: 0.5px solid black;
+}
+
+.bb-submit-custom-btn {
+  cursor: pointer;
+  font-size: 18px;
+  padding: 5px;
+  margin-right: 20px;
+  border-radius: 5px;
+  border: none;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+          box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+  border: 0.5px solid black;
+}
+
 .bb-add-input-group {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3641,11 +3819,11 @@
   margin: 0 20px 20px 0;
 }
 
-.bb-input-title {
+.bb-add-input-group .bb-input-title {
   font-size: 20px;
 }
 
-.bb-input-box {
+.bb-add-input-group .bb-input-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3661,17 +3839,17 @@
   font-family: sans-serif;
 }
 
-.bb-input-box:focus-within {
+.bb-add-input-group .bb-input-box:focus-within {
   border-color: #777;
 }
 
-.bb-prefix {
+.bb-add-input-group .bb-prefix {
   font-weight: 300;
   font-size: 20px;
   color: #999;
 }
 
-.bb-input-field {
+.bb-add-input-group .bb-input-field {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -3682,35 +3860,42 @@
   padding: 0.5rem;
 }
 
-.bb-add-custom-row {
+.bb-input-box-income {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  max-width: 200px;
+  background: #fff;
+  border: 1px solid #a0a0a0;
+  border-radius: 4px;
+  padding-left: 0.3rem;
+  overflow: hidden;
+  font-family: sans-serif;
+  margin-bottom: 10px;
 }
 
-.bb-add-custom-row .bb-delete-custom-btn {
-  position: relative;
-  top: 3px;
-  padding: 11px;
-  outline: none;
+.bb-input-box-income:focus-within {
+  border-color: #777;
 }
 
-.bb-submit-custom-btn {
-  cursor: pointer;
+.bb-prefix-income {
+  font-weight: 200;
   font-size: 18px;
-  padding: 5px;
-  border-radius: 5px;
+  color: #999;
+}
+
+.bb-input-field-income {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  font-size: 18px;
+  background: #fff;
   border: none;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
-          box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
-  border: 0.5px solid black;
+  outline: none;
+  padding: 0.3rem;
 }
 
 .bb-right {
@@ -3742,16 +3927,6 @@
   .bb-right {
     width: 100%;
   }
-}
-
-.bb-edit-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
 body,
