--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -3773,13 +3773,19 @@
           justify-content: center;
   position: relative;
   top: 3px;
-  padding: 11px;
+  font-size: 18px;
+  padding: 8px;
+  border-radius: 5px;
+  border: none;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+          box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+  border: 0.5px solid black;
 }
 
 .bb-add-custom-btn {
   cursor: pointer;
   font-size: 18px;
-  padding: 5px;
+  padding: 8px;
   border-radius: 5px;
   border: none;
   -webkit-box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
@@ -3790,13 +3796,13 @@
 .bb-submit-custom-btn {
   cursor: pointer;
   font-size: 18px;
-  padding: 5px;
-  margin-right: 20px;
+  padding: 8px;
   border-radius: 5px;
   border: none;
   -webkit-box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
           box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
   border: 0.5px solid black;
+  margin-right: 20px;
 }
 
 .bb-add-input-group {
