--- a/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.css
+++ b/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.css
@@ -213,9 +213,15 @@
 }
 
 .bb-left .bb-budget-box .bb-budget-top .bb-budget-top-right {
-  padding: 10px;
   cursor: pointer;
   margin: 20px;
+  font-size: 18px;
+  padding: 8px;
+  border-radius: 5px;
+  border: none;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+          box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+  border: 0.5px solid black;
 }
 
 .bb-left .bb-budget-box .bb-budget-middle {
@@ -379,13 +385,19 @@
           justify-content: center;
   position: relative;
   top: 3px;
-  padding: 11px;
+  font-size: 18px;
+  padding: 8px;
+  border-radius: 5px;
+  border: none;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+          box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+  border: 0.5px solid black;
 }
 
 .bb-add-custom-btn {
   cursor: pointer;
   font-size: 18px;
-  padding: 5px;
+  padding: 8px;
   border-radius: 5px;
   border: none;
   -webkit-box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
@@ -396,13 +408,13 @@
 .bb-submit-custom-btn {
   cursor: pointer;
   font-size: 18px;
-  padding: 5px;
-  margin-right: 20px;
+  padding: 8px;
   border-radius: 5px;
   border: none;
   -webkit-box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
           box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
   border: 0.5px solid black;
+  margin-right: 20px;
 }
 
 .bb-add-input-group {
