Fixed styling for buttons and mobile

--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -3601,15 +3601,26 @@
 
 .bb-left .bb-budget-box .bb-budget-top .bb-budget-top-left .bb-sort {
   width: 100%;
-  height: 30px;
+  height: 35px;
   margin-bottom: 20px;
   font-size: 18px;
+  border-radius: 2px;
 }
 
 .bb-left .bb-budget-box .bb-budget-top .bb-budget-top-right {
-  padding: 10px;
   cursor: pointer;
   margin: 20px;
+  font-size: 18px;
+  padding: 8px;
+  border-radius: 5px;
+  border: none;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+          box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+  border: 0.1px solid black;
+}
+
+.bb-left .bb-budget-box .bb-budget-top .bb-budget-top-right:hover {
+  background-color: #dddddd;
 }
 
 .bb-left .bb-budget-box .bb-budget-middle {
@@ -3756,6 +3767,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
@@ -3779,7 +3792,13 @@
   border: none;
   -webkit-box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
           box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
-  border: 0.5px solid black;
+  border: 0.1px solid black;
+  padding: 6px;
+  cursor: pointer;
+}
+
+.bb-edit-form .bb-delete-custom-btn:hover {
+  background-color: #dddddd;
 }
 
 .bb-add-custom-btn {
@@ -3790,7 +3809,11 @@
   border: none;
   -webkit-box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
           box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
-  border: 0.5px solid black;
+  border: 0.1px solid black;
+}
+
+.bb-add-custom-btn:hover {
+  background-color: #dddddd;
 }
 
 .bb-submit-custom-btn {
@@ -3801,8 +3824,17 @@
   border: none;
   -webkit-box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
           box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
-  border: 0.5px solid black;
+  border: 0.1px solid black;
   margin-right: 20px;
+  background-color: #4fcec5;
+}
+
+.bb-submit-custom-btn:hover {
+  background-color: #dddddd;
+}
+
+.bb-submit-custom-btn:hover {
+  background-color: #45b9b2;
 }
 
 .bb-add-input-group {
@@ -3933,6 +3965,11 @@
   .bb-right {
     width: 100%;
   }
+}
+
+.bb-delete-icon {
+  height: 25px;
+  width: 25px;
 }
 
 body,
