--- a/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.css
+++ b/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.css
@@ -544,27 +544,39 @@
 
 .bb-right {
   position: relative;
-  width: 44%;
+  width: 600px;
   height: 100%;
+}
+
+.bb-right .bb-chart-div {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .bb-right .bb-chart {
   width: 100%;
   height: 600px;
-  border-radius: 100%;
-}
-
-.bb-right .bb-pie-chart {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
+  border: 1px solid red;
 }
 
 .bb-right .bb-chart-type {
   position: absolute;
   top: 0;
   right: 0;
+}
+
+.bb-right .bb-chart-data {
+  position: absolute;
+  font-weight: bold;
+  font-size: 30px;
 }
 
 @media screen and (max-width: 1000px) {
