--- a/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
+++ b/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
@@ -274,22 +274,28 @@
 // Chart side
 .bb-right {
   position: relative;
-  width: 44%;
+  width: 600px;
   height: 100%;
+  .bb-chart-div {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .bb-chart {
     width: 100%;
     height: 600px;
-    border-radius: 100%;
-  }
-  .bb-pie-chart {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+    border: 1px solid red;
   }
   .bb-chart-type {
     position: absolute;
     top: 0;
     right: 0;
+  }
+  .bb-chart-data {
+    position: absolute;
+    font-weight: bold;
+    font-size: 30px;
   }
   @media screen and (max-width: 1000px) {
     width: 100%;
