--- a/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
+++ b/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
@@ -7,11 +7,12 @@
 
 @mixin button() {
   font-size: 18px;
-  padding: 8px;
+  padding: 12px;
   border-radius: 5px;
   border: none;
-  box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
-  border: 0.1px solid black;
+  background-color: rgb(228, 228, 228);
+  // box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+  // border: 0.1px solid black;
   &:hover {
     background-color: #dddddd;
   }
@@ -81,11 +82,13 @@
     width: 100%;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     padding: 20px;
+    .bb-budget-div {
+      width: 100%;
+    }
     .bb-budget-top {
       @include center(row);
       align-items: flex-start;
       justify-content: space-between;
-
       width: 100%;
       margin-bottom: 20px;
       border-bottom: 1px solid rgb(157, 157, 157);
@@ -106,8 +109,17 @@
         }
       }
       .bb-budget-top-right {
-        cursor: pointer;
+        display: flex;
+        flex-direction: row;
         margin: 20px;
+      }
+      .bb-budget-edit-btn {
+        cursor: pointer;
+        @include button();
+      }
+      .bb-budget-delete-btn {
+        cursor: pointer;
+        margin-right: 15px;
         @include button();
       }
     }
@@ -285,7 +297,6 @@
   .bb-chart {
     width: 100%;
     height: 600px;
-    border: 1px solid red;
   }
   .bb-chart-type {
     position: absolute;
@@ -294,6 +305,12 @@
   }
   .bb-chart-data {
     position: absolute;
+    font-weight: bold;
+    font-size: 30px;
+  }
+  .bb-chart-new {
+    position: absolute;
+    top: 100px;
     font-weight: bold;
     font-size: 30px;
   }
